fixed overflow messages and white space bottom

--- a/src/components/AddCommentForm/AddCommentForm.module.scss
+++ b/src/components/AddCommentForm/AddCommentForm.module.scss
@@ -6,8 +6,8 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background: linear-gradient(rgba(88, 57, 154, 0), rgba(73, 57, 154, 0.3))
-    no-repeat center center fixed;
+  // background: linear-gradient(rgba(88, 57, 154, 0), rgba(73, 57, 154, 0.3))
+  //   no-repeat center center fixed;
   min-height: 100%;
   position: absolute;
   width: 100%;
