--- a/src/components/MessagesPage/MessageList/Message/Message.module.scss
+++ b/src/components/MessagesPage/MessageList/Message/Message.module.scss
@@ -14,6 +14,9 @@
   position: relative;
   right: 0;
   margin-left: 50%;
+  // width: 100%;
+  max-width: 50%;
+  word-wrap: break-word;
 }
 
 .receivedMessage {
@@ -21,6 +24,7 @@
   position: relative;
   left: 0;
   margin-right: 50%;
+  word-wrap: break-word;
 }
 
 .deleteMessageButton {
