--- a/src/components/MessagesPage/MessagesPage.module.scss
+++ b/src/components/MessagesPage/MessagesPage.module.scss
@@ -3,19 +3,19 @@
 
 .MessagesPage {
   text-align: center;
-  background: linear-gradient(rgba(88, 57, 154, 0), rgba(73, 57, 154, 0.3))
-    no-repeat center center fixed;
-  height: 100%;
+  // background: linear-gradient(rgba(88, 57, 154, 0), rgba(73, 57, 154, 0.3))
+  //   no-repeat center center fixed;
+  min-height: 100%;
   top: 20px;
   position: absolute;
   width: 100%;
   justify-content: center;
-  padding-bottom: 200px;
+  // padding-bottom: 700px;
 }
 
 .messagesContainer {
   position: relative;
-  top: 100px;
+  top: 80px;
   display: flex;
   flex-direction: column;
   max-height: 70vh;
@@ -23,17 +23,15 @@
 
 .backButton {
   width: 50px;
-  margin: 1.5rem auto 0;
+  margin: 1.5rem auto 2rem;
   outline: none;
   border: none;
   background-color: transparent;
   font-size: 1rem;
   color: var(--black);
-  transition: color .2s;
+  transition: color 0.2s;
   &:hover {
     color: var(--dark1);
     cursor: pointer;
   }
 }
-
-
