--- a/src/components/PostView/PostView.module.scss
+++ b/src/components/PostView/PostView.module.scss
@@ -4,8 +4,8 @@
 .PostView {
   top: 60px;
   text-align: center;
-  background: linear-gradient(rgba(88, 57, 154, 0), rgba(73, 57, 154, 0.3))
-    no-repeat center center fixed;
+  // background: linear-gradient(rgba(88, 57, 154, 0), rgba(73, 57, 154, 0.3))
+  //   no-repeat center center fixed;
   min-height: 100%;
   position: absolute;
   width: 100%;
