--- a/src/components/UsersList/UsersList.module.scss
+++ b/src/components/UsersList/UsersList.module.scss
@@ -21,8 +21,9 @@
 
 .directoryHeader {
   text-align: center;
-  margin-bottom: 1rem;
   color: var(--black);
+  margin-top: 50px;
+  margin-bottom: 1rem;
 }
 
 .messagesLink {
