--- a/src/routes/LoginRoute/LoginRoute.module.scss
+++ b/src/routes/LoginRoute/LoginRoute.module.scss
@@ -4,10 +4,10 @@
 .loginSection {
   margin: 0 auto;
   text-align: center;
-  background-image: linear-gradient(
-    rgba(88, 57, 154, 0),
-    rgba(73, 57, 154, 0.3)
-  );
+  // background-image: linear-gradient(
+  //   rgba(88, 57, 154, 0),
+  //   rgba(73, 57, 154, 0.3)
+  // );
   min-height: 100%;
   overflow-y: hidden;
   top: 20px;
