--- a/src/routes/UsersRoute/UsersRoute.module.scss
+++ b/src/routes/UsersRoute/UsersRoute.module.scss
@@ -3,13 +3,10 @@
 .usersRouteContainer {
   top: 60px;
   text-align: center;
-  background: linear-gradient(
-      rgba(88, 57, 154, 0),
-      rgba(57, 154, 141, 0.4)
-    )
-    no-repeat center center fixed;
+  background: linear-gradient(rgb(255, 255, 255), rgb(203, 242, 237), rgb(67, 184, 163)) no-repeat
+    center center fixed;
   min-height: 100%;
-  top: 20px;
+  top: 50px;
   position: absolute;
   width: 100%;
   padding-bottom: 100px;
